# schematica

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  schematica.config.yaml  tsconfig.base.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release-smoke.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  ssh.rs
docs/: architecture.md  distribution.md  packaging.md  release.md  self-hosted-runners.md
docs/release-signing/: README.md  schematica-linux-gpg-public.asc
examples/: config.slurm.toml  config.slurm.yaml  config.toml  config.yaml  schema.json
packaging/: distribution-matrix.yaml
packaging/apt/: README.md  schematica.sources.template
packaging/homebrew/: schematica-desktop.rb  schematica.rb
packaging/linux/: dev.schematica.editor.desktop  (+1 more)
schemas/: schematica.config.schema.json
scripts/: check-release-version.mjs  generate-icons.mjs  install-local-appimage.sh  release-workflow.test.mjs  select-release-runners.mjs  select-release-runners.test.mjs  site-locales.test.mjs
site/: i18n.js  index.html  release-manifest.json  styles.css
(+82 files in other folders)
