[package]
name = "schematica"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "schematica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
